--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
-	font-family: 'Cardo', serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
 }
 
 /*** INTRO ***/
